WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241005
REGRESSION(STP146): wpt/quirks/table-cell-width-calculation.html
https://bugs.webkit.org/show_bug.cgi?id=241005
Summary
REGRESSION(STP146): wpt/quirks/table-cell-width-calculation.html
Sam Sneddon [:gsnedders]
Reported
2022-05-27 02:52:21 PDT
https://wpt.fyi/results/quirks/table-cell-width-calculation.html?label=master&label=experimental&product=safari-145%20preview&product=safari-146%20preview&diff&filter=ADC
Specifically, the "The table cell width calculation quirk, the quirk shouldn't apply for <video poster>" subtest.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-27 02:52:29 PDT
<
rdar://problem/94025359
>
youenn fablet
Comment 2
2022-06-02 03:00:32 PDT
Doing work in
https://github.com/WebKit/WebKit/pull/1235
EWS
Comment 3
2022-06-05 02:07:11 PDT
Committed
r295271
(
251317@main
): <
https://commits.webkit.org/251317@main
> Reviewed commits have been landed. Closing PR #1235 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug