REGRESSION(STP146): wpt/quirks/table-cell-width-calculation.html https://bugs.webkit.org/show_bug.cgi?id=241005 rdar://problem/94025359

Patch by Youenn Fablet <youennf@gmail.com> on 2022-06-05
Reviewed by Brent Fulgham and Chris Dumez.

We should be able to use memory cache when images are either loaded using ServiceWorkerMode::All or None.
Make the reload check stricter by mandating reload in case service worker mode is none for requests that might trigger registration matching in network process.

* LayoutTests/imported/w3c/web-platform-tests/quirks/table-cell-width-calculation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/quirks/table-cell-width-calculation.html: Added.
* Source/WebCore/loader/cache/CachedResourceLoader.cpp:
(WebCore::mustReloadFromServiceWorkerOptions):
(WebCore::CachedResourceLoader::determineRevalidationPolicy const):

Canonical link: https://commits.webkit.org/251317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295271 268f45cc-cd09-0410-ab3c-d52691b4dbfc